# Speed-Titans

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libs/: Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h
Libs/assimp/code/: CMakeLists.txt
Libs/glad/: glad.c  glad.h
shaders/: model.frag
